# agentic-back

./: .gitignore  pyproject.toml
src/: config.py
src/adapters/: agent_api.py  api.py  dependencies.py  global_exception_handler.py  http_api.py  main.py  threads_api.py  users_api.py  utilities.py  websocket_api.py
src/adapters/api/: api.py  dependencies.py
src/adapters/mongo/: client.py
src/application/data/: search_web.py
src/application/exceptions/: bad_request.py  domain_ex.py
src/application/exceptions/threads/: thread_not_found_ex.py
src/application/exceptions/user/: user_already_exists.py  user_not_authenticated.py  user_not_found_ex.py
src/application/image_workflow/: chains.py  graph.py  nodes.py
src/application/memory/: long_term_memory_int.py  metasearch_engine_int.py  scraper.py
src/application/rag/: embeddings.py  retrievers.py
src/application/threads/: i_thread_repository.py  threads_service.py
src/application/users/: i_users_repository.py  user_service.py
src/application/workflow/: __init__.py  chains.py  edges.py  generate_response.py  graph.py  long_term_memory_int.py  nodes.py
src/domain/: image_state.py  prompts.py  state.py  user.py
src/infrastructure/: api.py
src/infrastructure/database/: client.py  embeddings.py  mongo_thread_repository.py  mongo_user_repository.py  retrievers.py  splitters.py  vector_stores.py
src/infrastructure/llm/: providers.py
src/infrastructure/tools/: long_term_memory_tool.py  metasearch_engine.py  scrap.py  scrapers.py  web_scraping.py  web_scraping_tool.py
