[project]
name = "agentic-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain>=0.3.0",
    "langchain-core>=0.3.34",
    "langchain-groq>=0.2.4",
    "langchain-mongodb>=0.4.0",
    "langgraph>=0.2.70",
    "langgraph-checkpoint-mongodb==0.2.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.1",
    "pymongo>=4.9.2",
    "uvicorn>=0.40.0",
]
